# axum-compile-slow

./: Cargo.toml  Config.toml  README.md
src/: config.rs  main.rs
