[package]
name = "axum-compile-slow"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { git = "https://github.com/tokio-rs/axum.git", rev="0d8f8b7", features = ["multipart"] }
http = "0.2"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util", "timeout", "limit", "load-shed", "steer", "filter"] }
tower-http = {git = "https://github.com/tower-rs/tower-http.git", features = ["full"] }
hyper = { version = "0.14", features = ["server", "tcp", "http1", "stream"] }
tracing = "0.1"
tracing-subscriber = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
figment = { version = "0.10", features = ["toml", "env"] }
deadpool-postgres = {version = "0.9.0", features = ["rt_tokio_1"]}
tokio-postgres = "0.7.2"
# 依赖openssl https://docs.rs/openssl/0.10.34/openssl/#building
rustls = "0.19"
urlencoding = "1.3.3"
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
base64 = "0.13.0"
anyhow = "1"
bcrypt = "0.9"
futures = "0.3"
bytes = "1.0"
md5 = "0.7.0"
pem = "0.8.3"